--- a/forget.css
+++ b/forget.css
@@ -2,7 +2,7 @@ body{
     padding:0;
     margin:0;
     background:url("./bgimg.jpg")no-repeat;
-    background-size:cover
+    background-size:cover;
 }
 .container{
     height:250px;
